# Reframe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.fa.md  README.md  Readme.fa.md  SECURITY.md  admin_handlers.py  config.py  database.py  docker-compose.yml  handlers.py  locales.py  locustfile.py  main.py  media_processor.py  metrics.py  pyproject.toml  release.sh  requirements.txt  scanner.py  tracing.py  utils.py
.github/workflows/: ci.yml  security.yml
k8s/: deployment.yml  hpa.yml  namespace.yml  service.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: reframe.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: conftest.py  test_config.py  test_database.py  test_e2e.py  test_handlers.py  test_integration.py  test_locales.py  test_scanner.py
